# plat-engine-1

./: CMakeLists.txt
Sample/LittlePlatform/include/: Player.h
Sample/LittlePlatform/src/: main.cpp
engine/include/platengine/: ComponentManager.h  Entity.h  Game.h  InputSystem.h  MovementSystem.h  PhysicsSystem.h  Registry.h  RenderSystem.h  ResourceManager.h  SceneManager.h
engine/include/platengine/components/: Position.h  Sprite.h  Velocity.h
engine/src/: Entity.cpp  Game.cpp  InputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ResourceManager.cpp  SceneManager.cpp
include/: Entity.h  Player.h
sample/littlePlatform/src/: main.cpp
src/: main.cpp
